--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
   schedule:
     - cron : 30 02 * * * # 8 am IST
     - cron : 00 14 * * * # 7:30 pm IST
-    - cron : 00 06 * * * # 11:30 am IST Monday to Friday
+    - cron : 00 06 * * 1-5 # 11:30 am IST Monday to Friday
 
 jobs:
   run-postman-tests:
